--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
